# vault-tree

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/core/: Cargo.toml
crates/core/src/: fingerprint.rs  frontmatter.rs  lib.rs  links.rs  search.rs  testutils.rs  tree.rs  utils.rs
crates/lib-organizer/: Cargo.toml
crates/lib-organizer/src/: classifier.rs  cli.rs  compression.rs  config.rs  git.rs  indexing.rs  lib.rs  manifest.rs  organizer.rs  scanner.rs  secrets.rs  sync.rs  types.rs
crates/lib-organizer/src/search/: extractor.rs  index.rs  mod.rs  query.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  main.rs  server.rs  tools.rs  transport.rs
crates/mcp/src/knowledge/: arxiv.rs  cache.rs  crates_io.rs  dbpedia.rs  defillama.rs  github.rs  mod.rs  musicbrainz.rs  npm.rs  openlibrary.rs  reddit.rs  shodan.rs  sourceforge.rs  stackoverflow.rs  wikiart.rs  wikidata.rs  wikipedia.rs
crates/mcp/src/tools/: knowledge.rs  library.rs  mod.rs  secrets.rs  vault.rs
crates/mcp/tests/: integration.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
plugin/: .gitignore  CLAUDE.md  esbuild.config.mjs  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json
plugin/src/: main.ts  settings.ts
plugin/src/knowledge/: batch.ts  cache.ts  generator.ts  index.ts  linker.ts  registry.ts  types.ts
plugin/src/knowledge/providers/: arxiv.ts  crates.ts  dbpedia.ts  defillama.ts  github.ts  musicbrainz.ts  npm.ts  openlibrary.ts  reddit.ts  shodan.ts  sourceforge.ts  stackoverflow.ts  wikiart.ts  wikidata.ts  wikipedia.ts
plugin/src/knowledge/providers/ai/: ollama.ts  openai.ts
plugin/src/mcp/: server.ts  tools.ts  types.ts
plugin/src/mcp/tools/: index.ts  knowledge.ts  links.ts  organize.ts  publish.ts  types.ts  vault.ts
plugin/src/organize/: fingerprint.ts  ingest.ts  suggestions.ts  triage-modal.ts  triage.ts  types.ts
plugin/src/publish/: bridge.ts  preview.ts  types.ts  validator.ts
plugin/src/tree/: builder.ts  renderer.ts
plugin/src/utils/: frontmatter.ts  metadata.ts  vault.ts
plugin/src/wasm/: loader.ts  types.ts
scripts/: pre-commit-secrets
