[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["droo"]
license = "MIT"
repository = "https://github.com/Hydepwns/vault-tree"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
walkdir = "2"
regex = "1"
blake3 = "1"
rayon = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
