[package]
name = "vault-tree-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MCP server for vault-tree"

[[bin]]
name = "vault-tree-mcp"
path = "src/main.rs"

[dependencies]
vault-tree-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
