[package]
name = "vault-tree-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MCP server for vault-tree"

[[bin]]
name = "vault-tree-mcp"
path = "src/main.rs"

[dependencies]
vault-tree-core = { path = "../core" }
lib-organizer = { path = "../lib-organizer" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
reqwest = { version = "0.12", features = ["json", "blocking"] }
urlencoding = "2"
quick-xml = "0.37"

[dev-dependencies]
tempfile.workspace = true

[lib]
name = "vault_tree_mcp"
path = "src/lib.rs"
