[package]
name = "vault-tree-wasm"
version = "0.1.0"
edition = "2021"
authors = ["droo"]
license = "MIT"
description = "WASM bindings for vault-tree"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
vault-tree-core = { path = "../core" }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
